--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
 .App {
-  text-align: center;
+  margin: 0;
+  color: #eeeeee;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App header {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: space-around;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: #303841;
+  text-transform: uppercase;
+}
+.App header h1 {
+  margin: 20px;
+  padding: 10px;
+  color: #d72323;
+}
+.App header .Nav {
+  padding: 20px;
+}
+.App header .Nav .link {
+  color: #eeeeee;
+  text-decoration: none;
+  font-size: 20px;
+  padding: 20px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/*# sourceMappingURL=App.css.map */
