--- a/src/style/Music.scss
+++ b/src/style/Music.scss
@@ -1,14 +1,12 @@
 .Music {
-  display: grid;
-  grid-template-rows: repeat(2, 1fr);
-  grid-template-columns: repeat(2, 1fr);
-  max-width: 900px;
-  margin: 50px auto;
+  display: flex;
+  flex-direction: row;
+  max-width: 100vw;
+  margin: 50px;
   align-items: start;
 
   &_Image {
-    grid-row-start: 1;
-    grid-row-end: 3;
+    width: 900px;
   }
 
   &_Content {
@@ -17,52 +15,24 @@
     color: #1e2022;
 
     &_Title {
-      font-size: 40px;
+      font-size: 70px;
       font-weight: 600;
     }
 
     &_Artist {
-      font-size: 20px;
+      font-size: 40px;
       span {
-        font-size: 15px;
+        font-size: 40px;
         font-style: italic;
         margin-right: 10px;
       }
     }
     &_Length {
-      font-size: 20px;
+      font-size: 40px;
     }
     &_Price {
       font-size: 30px;
-      font-weight: 800;
-    }
-  }
-  &_Button {
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-    align-items: center;
-    margin-top: 20px;
-    &_Qty {
-      margin: 20px;
-      label {
-        color: #1e2022;
-        font-size: 20px;
-        margin-right: 10px;
-      }
-    }
-    &_Cart {
-      button {
-        background-color: #fce38a;
-        border-radius: 20px;
-        padding: 10px 50px;
-        border: none;
-        &:hover{
-          transform: scale(1.1);
-          cursor: pointer;
-          transition: all ease-in-out 0.3s;
-        }
-      }
+      font-weight: 600;
     }
   }
 }
