--- a/src/style/SongRow.css
+++ b/src/style/SongRow.css
@@ -1,8 +1,7 @@
 .songRow {
   display: flex;
   flex-direction: column;
-  width: 200px;
-  height: 250px;
+  height: 300px;
   align-items: center;
   justify-content: space-between;
   margin: 10px;
@@ -15,6 +14,11 @@
   transform: scale(1.1);
   cursor: pointer;
   transition: all ease-in-out 0.3s;
+}
+.songRow_Image img {
+  object-fit: cover;
+  width: 200px;
+  height: 250px;
 }
 .songRow_Content {
   color: #1e2022;
