--- a/src/style/SongRow.scss
+++ b/src/style/SongRow.scss
@@ -1,8 +1,7 @@
 .songRow {
     display: flex;
     flex-direction: column;
-    width: 200px;
-    height: 250px;
+    height: 300px;
     align-items: center;
     justify-content: space-between;
     margin: 10px;
@@ -14,6 +13,12 @@
             transform: scale(1.1);
             cursor: pointer;
             transition: all ease-in-out 0.3s;
+        }
+        img {
+            object-fit: cover;
+            width: 200px;
+            height: 250px;
+
         }
     }
 
